--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -65,7 +65,7 @@ jobs:
          uses: SonarSource/sonarcloud-github-action@master
          env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-           SONAR_TOKEN: "${{ secrets.SONAR_TOKEN }}"
+           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
    instrumented:
      runs-on: macos-latest
