--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,11 +61,11 @@ jobs:
 #          run: |
 #           sed -i 's@'$GITHUB_WORKSPACE'@/github/workspace/@g' coverage.json
        
-       - name: SonarCloud Scan
-         uses: SonarSource/sonarcloud-github-action@master
-         env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-           SONAR_TOKEN: "${{ secrets.SONAR_TOKEN }}"
+#        - name: SonarCloud Scan
+#          uses: SonarSource/sonarcloud-github-action@master
+#          env:
+#            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+#            SONAR_TOKEN: "${{ secrets.SONAR_TOKEN }}"
 
    instrumented:
      runs-on: macos-latest
