--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
 
     lintOptions {
         baseline(file("lint-baseline.xml"))
+        disable 'NotificationPermission'
     }
 
     configurations {
