--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,40 +67,40 @@ jobs:
 #            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
 #            SONAR_TOKEN: "${{ secrets.SONAR_TOKEN }}"
 
-#   instrumented:
-#     runs-on: macos-latest
-#
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3.5.0
-#
-#       - name: Set up our JDK environment
-#         uses: actions/setup-java@v3.10.0
-#         with:
-#           distribution: 'temurin'
-#           java-version: ${{ inputs.java_version }}
-#
-#       - name: Gradle cache
-#         uses: gradle/gradle-build-action@v2
-#
-#       - name: Set up Android virtual device
-#         uses: reactivecircus/android-emulator-runner@v2
-#         with:
-#           api-level: ${{ inputs.api_level }}
-#           arch: x86_64
-#           target: ${{ inputs.api_level >= 30 && 'google_apis' || 'default' }}
-#           force-avd-creation: false
-#           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-#           disable-animations: false
-#           script: echo "Generated AVD snapshot for caching."
-#
-#       - name: Run instrumented tests on Android virtual device
-#         uses: reactivecircus/android-emulator-runner@v2
-#         with:
-#           api-level: ${{ inputs.api_level }}
-#           arch: x86_64
-#           target: 'default'
-#           force-avd-creation: false
-#           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-#           disable-animations: true
-#           script: ./gradlew connectedAndroidTest --stacktrace
+   instrumented:
+     runs-on: macos-latest
+
+     steps:
+       - name: Checkout
+         uses: actions/checkout@v3.5.0
+
+       - name: Set up our JDK environment
+         uses: actions/setup-java@v3.10.0
+         with:
+           distribution: 'temurin'
+           java-version: ${{ inputs.java_version }}
+
+       - name: Gradle cache
+         uses: gradle/gradle-build-action@v2
+
+       - name: Set up Android virtual device
+         uses: reactivecircus/android-emulator-runner@v2
+         with:
+           api-level: ${{ inputs.api_level }}
+           arch: x86_64
+           target: ${{ inputs.api_level >= 30 && 'google_apis' || 'default' }}
+           force-avd-creation: false
+           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+           disable-animations: false
+           script: echo "Generated AVD snapshot for caching."
+
+       - name: Run instrumented tests on Android virtual device
+         uses: reactivecircus/android-emulator-runner@v2
+         with:
+           api-level: ${{ inputs.api_level }}
+           arch: x86_64
+           target: 'default'
+           force-avd-creation: false
+           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+           disable-animations: true
+           script: ./gradlew connectedAndroidTest --stacktrace
