--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ env:
 # Where will they run
 jobs:
    run-tests:
-     uses: araneforseti/grocery-app/.github/workflows/tests.yml@master
+     uses: araneforseti/grocery-app/.github/workflows/tests.yml@main
      with:
        api_level: 31
        java_version: 11
@@ -17,7 +17,6 @@ jobs:
    build-nonprod:
      runs-on: macos-latest
      needs: [run-tests]
-     if: github.ref != 'refs/heads/master'
      steps:
        - name: Checkout
          uses: actions/checkout@v3.5.0
@@ -32,8 +31,7 @@ jobs:
          uses: gradle/gradle-build-action@v2
 
        - name: build debug
-         if: github.ref != 'refs/heads/master'
-         run: ./gradlew app:bundleDebug
+         run: ./gradlew app:assembleDebug
 
        - name: Upload our APK
          uses: actions/upload-artifact@v3.1.2
