--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -3,7 +3,7 @@ name: Master Build
 on:
   push:
     branches:
-      - master
+      - main
 
 env:
   API_VERSION: 31
@@ -12,7 +12,7 @@ env:
 # Where will they run
 jobs:
   run-tests:
-    uses: araneforseti/grocery-app/.github/workflows/tests.yml@master
+    uses: araneforseti/grocery-app/.github/workflows/tests.yml@main
     with:
       api_level: 31 # Need to find a way to not duplicate these
       java_version: 11
